public/style.css
body {
	background-color: #25252f;
}

.white {
	color: white;
}

.got-btn {
	background: #FF4545;
	color: white;
	line-height: 42px;
	padding: 0 20px;
	-webkit-transition: opacity 0.2s ease;
	transition: opacity 0.2s ease;
}

.badge-got {
	font-weight: 200;
	font-size: 12px;
	padding: 6px 10px;
    text-transform: uppercase;
    color: #fff;
    background-color: #484c4f;
}

.badge {
	font-weight: 400;
	text-transform: uppercase;
}

.badge-info {
	color: #13899c;
	background-color: #a6e9f4;
}

.badge-danger {
	color: #cd0545;
	background-color: #fcc6de;
}

.badge-success {
	color: #316942;
	background-color: #a6d4a7;
}

.got-medium-label {
	font-size: 16px;
	text-transform: uppercase;
	letter-spacing: 1px;
}

.got-snow-overlay {
	top: 60px;
	margin-left: 80px;
	width: 420px;
    height:420px;
    position: absolute;
	background-size: contain;
    background-image: url(/public/gif/2eSd.gif);
    border-radius: 50%;
}

.background-dead {
	background-color: #FFEDED;
}

.background-walker {
	background-color: #EDF3FF;
}

.got-status-box {
	background: white;
    text-align: center;
    border-radius: 4px;
    padding: 10px;
}

.got-status-big-number {
	font-size: 100px;
}

.got-text-big {
	font-family: 'Cormorant Garamond', times, serif;
	font-size: 60px;	
}

.got-text-mid {
	font-size: 18px;
	color: #999ca1;
}

.got-text-slim {
	font-weight: 200;
}

.got-btn:hover {
	color: white;
	opacity: 0.9;
}

.background-dark-grey {
	background-color: #5B5D62;
	border: 2px solid #5B5D62;
}

.background-gold {
	background-color: #FFD23E;
	border: 2px solid #FFD23E;
}

.got-table {
	border-radius: 4px;
	background: white;
	overflow: hidden;
	box-shadow: 0 0 35px rgba(140, 152, 164, 0.125) !important;
}

.color-white {
	color: white;
}

.player-position {
	display: inline-block;
	margin: 0 1rem 0 0;
	background-color: rgba(37, 37, 47, 0.3);
	color: #fff;
	padding: 0 .2rem;
	border-radius: 15px;
	min-width: 30px;
	text-align: center;
	font-size: 1rem;
}

.player-position.top-three {
	background-color: rgba(37, 37, 47, 0.90);
}

@media (min-width: 576px) {
	.modal-dialog {
		max-width: 500px;
		margin: 4.75rem auto;
	}
}


/* MUSIC PLAYER */

audio { 
	margin-top: 20px;
	margin-left: -248px;
}

audio::-webkit-media-controls-panel {
	border-right: 190px solid black;
	width: 60px;
	overflow: visible;
	-webkit-tranistion: all 0.2s ease;
	tranistion: background-color 0.2s ease;
}

audio::-webkit-media-controls-play-button {
	position: absolute;
	margin-left: 242px;
}

audio::-webkit-media-controls-panel:hover {
	background-color: #d7d9e6;
}

audio::-webkit-media-controls-timeline,
audio::-webkit-media-controls-mute-button,
audio::-webkit-media-controls-more-button,
audio::-webkit-media-controls-current-time-display,
audio::-webkit-media-controls-time-remaining-display {
	display: none;
}








/* SNOW */
.snowflake {
	color: #fff;
	font-size: 1em;
	font-family: Arial, sans-serif;
	text-shadow: 0 0 5px #000;
  }
  
@-webkit-keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@-webkit-keyframes snowflakes-shake{0%,100%{-webkit-transform:translateX(0);transform:translateX(0)}50%{-webkit-transform:translateX(80px);transform:translateX(80px)}}@keyframes snowflakes-fall{0%{top:-10%}100%{top:100%}}@keyframes snowflakes-shake{0%,100%{transform:translateX(0)}50%{transform:translateX(80px)}}.snowflake{position:fixed;top:-10%;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;cursor:default;-webkit-animation-name:snowflakes-fall,snowflakes-shake;-webkit-animation-duration:10s,3s;-webkit-animation-timing-function:linear,ease-in-out;-webkit-animation-iteration-count:infinite,infinite;-webkit-animation-play-state:running,running;animation-name:snowflakes-fall,snowflakes-shake;animation-duration:10s,3s;animation-timing-function:linear,ease-in-out;animation-iteration-count:infinite,infinite;animation-play-state:running,running}.snowflake:nth-of-type(0){left:1%;-webkit-animation-delay:0s,0s;animation-delay:0s,0s}.snowflake:nth-of-type(1){left:10%;-webkit-animation-delay:1s,1s;animation-delay:1s,1s}.snowflake:nth-of-type(2){left:20%;-webkit-animation-delay:6s,.5s;animation-delay:6s,.5s}.snowflake:nth-of-type(3){left:30%;-webkit-animation-delay:4s,2s;animation-delay:4s,2s}.snowflake:nth-of-type(4){left:40%;-webkit-animation-delay:2s,2s;animation-delay:2s,2s}.snowflake:nth-of-type(5){left:50%;-webkit-animation-delay:8s,3s;animation-delay:8s,3s}.snowflake:nth-of-type(6){left:60%;-webkit-animation-delay:6s,2s;animation-delay:6s,2s}.snowflake:nth-of-type(7){left:70%;-webkit-animation-delay:2.5s,1s;animation-delay:2.5s,1s}.snowflake:nth-of-type(8){left:80%;-webkit-animation-delay:1s,0s;animation-delay:1s,0s}.snowflake:nth-of-type(9){left:90%;-webkit-animation-delay:3s,1.5s;animation-delay:3s,1.5s}.snowflake:nth-of-type(10){left:25%;-webkit-animation-delay:2s,0s;animation-delay:2s,0s}.snowflake:nth-of-type(11){left:65%;-webkit-animation-delay:4s,2.5s;animation-delay:4s,2.5s}



@media (min-width: 768px) {
	.col-md-15 {
		flex: 0 0 12.499999995%;
		max-width: 12.499999995%;
	}
}

